# youtube-to-docs

./: .gitignore  .pre-commit-config.yaml  404.html  GEMINI.md  LICENSE  README.md  gemini-extension.json  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  time_to_summarize.csv
.agents/skills/youtube-to-docs/: SKILL.md
.gemini/skills/youtube-to-docs/: SKILL.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-update.yml  deploy-docs.yml  pypi-publish.yml
assets/time_to_summarize/: index.html
commands/youtube-to-docs/: ytt.toml
docs/: development.md  how-this-works.md  index.md  m365_setup.md  notebooks.md  performance.md  pricing.md  usage.md
docs/assets/: time_to_summarize.csv  time_to_summarize.md
how-this-works/: index.html
notebooks/: getting_started.ipynb
performance/: index.html
pricing/: index.html
qa-files/: gemini-3-flash-preview - vid1 - Title 1 - qa (from gemini-3-flash-preview).md
scripts/: README.md  reauthenticate_google.py  regression_core.py  regression_sharepoint.py  regression_workspace_es.py
scripts/performance/: README.md  time_to_summarize.csv  time_to_summary.py  transcript.vtt.en.vtt
scripts/regression/: README.md  regression_aws_polly.py  regression_aws_transcribe.py  regression_core.py  regression_two_vids.py  regression_two_vids_verbose.py  test_gcp_stt.py
search/: search_index.json
speaker-extraction-files/: gemini-3-pro-preview - vid1 - Title 1 - speakers (from gemini-3-pro-preview).txt
tests/: README.md  test_aws_stt.py  test_gcp_stt.py  test_infographic.py  test_llms.py  test_m365_storage.py  test_main.py  test_mcp_server.py  test_sharepoint.py  test_storage_upload.py  test_transcript.py  test_tts.py  test_tts_filtering.py  test_utils.py  test_video.py  test_workspace.py
usage/: index.html
youtube_to_docs/: infographic.py  llms.py  m365_storage.py  main.py  mcp_server.py  models.py  prices.py  storage.py  transcript.py  tts.py  utils.py  video.py
