[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[project]
name = "youtube-to-docs"
version = "0.0.19"
description = "Convert YouTube videos into structured docs, summaries, audio, and visual assets for easier discovery"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.12.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib",
    "google-genai",
    "isodate>=0.7.2",
    "mcp>=1.25.0",
    "msal>=1.34.0",
    "openai>=1.56.0",
    "polars>=1.36.1",
    "pypandoc>=1.16.2",
    "pypandoc_binary>=1.16.2",
    "requests>=2.32.5",
    "static-ffmpeg>=2.13",
    "xlsxwriter>=3.2.9",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
youtube-to-docs = "youtube_to_docs.main:main"

[tool.setuptools.packages.find]
include = ["youtube_to_docs*"]
exclude = [
    "tests*",
    "docs*",
    "scripts*",
    "youtube-to-docs-artifacts*",
    "summary-files*",
    "transcript-files*",
    "audio-files*",
    "infographic-files*",
    "speaker-extraction-files*",
    "qa-files*",
    "video-files*",
]

[tool.ruff]
# Match the project's Python version requirement
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`, `W`), and isort (`I`)
select = ["E", "F", "I", "W"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["scripts"]


